Add module definition

--- a/TODO
+++ b/TODO
@@ -2,7 +2,10 @@
 ☐ Read basic details in book and to get high level concepts @high
     ✔ Chapter 1 @today @done(22-07-06 15:10)
     ✔ Chapter 2 @today @done(22-07-07 16:42)
-    ☐ Chapter 3 @today
-
+    ✔ Chapter 3 @today @done(22-07-11 11:53)
+    ✔ Chapter 4 @today @done(22-07-11 15:59)
+    ☐ Chapter 5 @today
+    ☐ Chapter 6 @today
+☐ Create some simple slides to demo with for tomorrow @critical
 ☐ Find some quick win videos/courses that help understand the basics @low
 ☐ Create a working example that generates an environment that looks and sounds like staging dev @critical
