--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
     ✔ Chapter 4 @today @done(22-07-11 15:59)
     ☐ Chapter 5 @today
     ☐ Chapter 6 @today
+    ☐ Chapter 7 @today
 ✔ Create some simple slides to demo with for tomorrow @critical @done(22-07-11 17:40)
 ☐ Find some quick win videos/courses that help understand the basics @low
 ☐ Create a working example that generates an environment that looks and sounds like staging dev @low
