Update documentation and presentation Chapter 6 started

--- a/TODO
+++ b/TODO
@@ -4,8 +4,8 @@
     ✔ Chapter 2 @today @done(22-07-07 16:42)
     ✔ Chapter 3 @today @done(22-07-11 11:53)
     ✔ Chapter 4 @today @done(22-07-11 15:59)
-    ☐ Chapter 5 @today
-    ☐ Chapter 6 @today
+    ✔ Chapter 5 @today @done(22-07-25 08:07)
+    ☐ Chapter 6 @today 
     ☐ Chapter 7 @today
 ✔ Create some simple slides to demo with for tomorrow @critical @done(22-07-11 17:40)
 ☐ Find some quick win videos/courses that help understand the basics @low
